--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@fortawesome/fontawesome-free": "^5.15.3",
         "axios": "^0.21",
         "bootstrap": "^5.0.0-beta3",
+        "dropzone": "^5.9.2",
         "flag-icon-css": "^3.5.0",
         "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
