--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-exif": "^8.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -16,6 +17,7 @@
         "laravel/scout": "^8.0",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
+        "spatie/image": "^1.10",
         "teamtnt/laravel-scout-tntsearch-driver": "^11.3"
     },
     "require-dev": {
