--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "ext-exif": "^8.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
+        "google/cloud-vision": "^1.3",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/scout": "^8.0",
